# ITI-SOME_IP-Playground

./: README.md  SOMEIP_SUMMARY.md  SOME_IPConfiguration_Guide.md
BootloaderProject/: CMakeLists.txt  vsomeip-local.json
BootloaderProject/fidil/: bootloader.fdepl  bootloader.fidl
BootloaderProject/src/: client.cpp  server.cpp
capslock_someip_Task/: CMakeLists.txt  README.md  build.sh
capslock_someip_Task/common/: capslock_ids.hpp
capslock_someip_Task/example_01_control/: client.cpp  client.json  server.cpp  server.json
capslock_someip_Task/example_02_monitor/: client.cpp  client.json  server.cpp  server.json
